--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ axum = {version = "0.6.16", features = ["headers"] }
 mongodb = {version = "2.5.0", features = ["bson-uuid-1"]}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.68"
-tokio = { version = "1.0", features = ["full"] }
+tokio = { version = "1.0", features = ["full", "time"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 uuid = "1.3.1"
