--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 axum = {version = "0.6.16", features = ["headers"] }
+futures = "0.3.28"
 mongodb = {version = "2.5.0", features = ["bson-uuid-1"]}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.68"
